# LLMs-Planning

./: .gitignore  LICENSE  LICENSE.md  README.md
action_extraction/: data.csv  f1-engines-scores.csv  gen_barchart.py  gpt-actions.py  utils.py
action_extraction/data/: ada_cook_1.out  ada_cook_2.out  ada_wiki_1.out  ada_wiki_2.out  ada_win_1.out  ada_win_2.out  queries_cook.txt  queries_wiki.txt  queries_win.txt
gpt_plan_test/: README.md  ReasoningTasks.py  execution.stats  gpt_sas_plan  grounding.stats  output  output.sas  pr-domain.pddl  pr-new-domain.pddl  pr-new-problem.pddl  pr-problem.pddl  requirements.txt  sas_plan  scratch.py  test.sh
gpt_plan_test/Executor/: __init__.py
gpt_plan_test/configs/: caeser_cipher.yaml  goal_directed_new_prompt.yaml  ipc_config.yaml  logistics.yaml  (+10 more)
llm_planning_analysis/: README.md  back_prompting.py  back_prompting_parallel.py  llm_plan_pipeline.py  new_domain.pddl  new_problem.pddl  obfuscator.py  problem_generators.py  prompt_generation.py  response_evaluation.py  response_generation.py  stats_generation.py
plan-bench/: README.md  llm_plan_pipeline.py  problem_generators.py  prompt_generation.py  response_evaluation.py
planner_tools/VAL/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.config  parser
planner_tools/VAL/applications/: README.md
planner_tools/VAL/applications/Analyse/src/: main.cpp
planner_tools/VAL/applications/DomainView/src/: main.cpp
planner_tools/VAL/applications/HowWhatWhen/src/: main.cpp
planner_tools/VAL/applications/Instantiate/src/: main.cpp
planner_tools/VAL/applications/InstantiationIP/src/: main.cpp
planner_tools/VAL/applications/Parser/src/: main.cpp
planner_tools/VAL/applications/PinguPlan/src/: main.cpp
planner_tools/VAL/applications/PlanRec/src/: main.cpp
planner_tools/VAL/applications/PlanSeqStep/src/: main.cpp
planner_tools/VAL/applications/PlanToValStep/src/: main.cpp
planner_tools/VAL/applications/Relax/src/: main.cpp
planner_tools/VAL/applications/TIM/src/: main.cpp
planner_tools/VAL/applications/ToFn/src/: main.cpp
planner_tools/VAL/applications/TypeAnalysis/src/: main.cpp
planner_tools/VAL/applications/ValStep/src/: main.cpp
planner_tools/VAL/applications/Validate/src/: main.cpp
planner_tools/VAL/applications/ValueSeq/src/: main.cpp
planner_tools/VAL/include/: Action.h  Plan.h  Proposition.h
planner_tools/VAL/libraries/: README.md
planner_tools/VAL/libraries/VAL/include/: AbstractGraph.h  AccumulatedDelta.h  Action.h  Agents.h  Analyser.h  Cascader.h  CausalGraph.h  DebugWriteController.h  Environment.h  Evaluator.h  Events.h  Exceptions.h  FastEnvironment.h  FlexLexer.h  FuncAnalysis.h  FuncExp.h  GoalHypSpace.h  HowAnalyser.h  InstPropLinker.h  LPGPTranslator.h  LaTeXSupport.h  LibLink.h  OptInterface.h  Ownership.h  Partitions.h  PinguPlanGenerator.h  Plan.h  PlanExecutionTracker.h  Polynomial.h  PrettyPrinter.h  Proposition.h  RelaxTranslator.h  RepairAdvice.h  RobustAnalyse.h  SASActions.h  SimpleEval.h  State.h  StateObserver.h  TIM.h  TIMUtilities.h  (+21 more)
planner_tools/VAL/libraries/VAL/src/: AccumulatedDelta.cpp  Action.cpp  CausalGraph.cpp  DebugWriteController.cpp  Environment.cpp  Evaluator.cpp  Events.cpp  FastEnvironment.cpp  FuncAnalysis.cpp  FuncExp.cpp  HowAnalyser.cpp  InstPropLinker.cpp  LaTeXSupport.cpp  LibLink.cpp  Ownership.cpp  PinguPlanGenerator.cpp  Plan.cpp  Polynomial.cpp  PrettyPrinter.cpp  Proposition.cpp  RelaxTranslator.cpp  RepairAdvice.cpp  RobustAnalyse.cpp  SASActions.cpp  SimpleEval.cpp  State.cpp  TIM.cpp  TimSupport.cpp  ToFunction.cpp  TrajectoryConstraints.cpp  TypedAnalyser.cpp  Utils.cpp  Validator.cpp  graphconstruct.cpp  instantiation.cpp  instantiationConstraint.cpp  ptree.cpp  random.cpp  typecheck.cpp  valLib.cpp
planner_tools/VAL/libraries/VAL/src/Parser/: pddl+.cpp  pddl+.l  pddl+.lex.yy.h  pddl+.y
planner_tools/VAL/samples/IPC/Depots/Strips/: pfile1  pfile1.plan  pfile10  pfile11  pfile12  pfile13  pfile14  pfile15  pfile16  pfile17  pfile18  pfile19  pfile2  pfile20  pfile21  pfile22  pfile3  pfile4  pfile5  pfile6  pfile7  pfile8  pfile9
planner_tools/VAL/samples/domainsWithEventsAndProcesses/Coffee/: coffeemaking.pddl  coffeeplan.txt  coffeeproblem.pddl
planner_tools/VAL/samples/domainsWithEventsAndProcesses/Drive/: drive-problem.pddl  drivedomain.pddl  driveplan.txt
planner_tools/VAL/samples/domainsWithEventsAndProcesses/Sleeping Beauty with Capacitor/: sleepingbeauty-problem.pddl  sleepingbeauty-problem2.pddl  sleepingbeauty.pddl  sleepingbeautyplan.txt  sleepingbeautyplan2.txt
planner_tools/VAL/samples/domainsWithEventsAndProcesses/Sleeping Beauty with Magnetic Window Alarm/: sleepingbeauty-problem.pddl  sleepingbeauty.pddl  sleepingbeautyplan.txt
planner_tools/VAL/samples/domainsWithEventsAndProcesses/Tanks and a Bucket Toricelli/: tank-domain.pddl  tank-problem.pddl  tankplan.txt
planner_tools/VAL/samples/domainsWithEventsAndProcesses/VendingMachine/: vendingmachine-problem.pddl  vendingmachine.pddl  vendingmachineplan.txt
planner_tools/VAL/scripts/: build_linux_windows.sh  build_linux_windows_dev.sh  build_macos.sh  build_macos_dev.sh  clean_linux_windows_dev.sh  clean_macos_dev.sh  validate_testcases.txt
planner_tools/VAL/scripts/linux/: build.sh  build_linux64.sh  build_win32.sh  build_win64.sh  clean.sh  clean_build.sh  clean_documentation.sh  clean_linux64.sh  clean_win32.sh  clean_win64.sh  documentation.sh  format.sh  setup_flex_bison.sh  test.sh  test_linux64.sh
planner_tools/VAL/scripts/linux/toolchain/: GIT_URL.txt
planner_tools/VAL/scripts/macos/: build.sh  build_macos64.sh  clean.sh  clean_build.sh  clean_macos64.sh  test.sh  test_macos64.sh
planner_tools/VAL/scripts/windows/: build_win64_eclipse_mingw.bat  build_win64_mingw.bat  build_win64_vs.bat  clean_win64.bat  documentation.bat  format.bat  setup_dlfcn-win32.bat
planner_tools/VAL/src/: Action.cpp  Plan.cpp  Polynomial.cpp  Proposition.cpp  RelaxTranslator.cpp  TypeStripWC.cpp  Validator.cpp  main.cpp  pddl+.cpp
planner_tools/VAL/src/Parser/: pddl+.yacc
(+620 files in other folders)
